[package]
name = "easy-microarchitecture-level"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.8.0"
iced_aw = { version = "0.4.1", features = ["card"] }
iced_native = "0.9.1"
iced_style = "0.7.0"
raw-cpuid = "10.7.0"
